# Kraut

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Code/: CMakeLists.txt
Code/BuildSystem/CMake/: CMAKE_Application.txt  CMAKE_DMake.txt  CMAKE_GenVisualDProject.txt  CMAKE_GeneralConfig.txt  CMAKE_GlobGames.txt  CMAKE_GlobProjects.txt  CMAKE_Library.txt  CMAKE_LibraryFolder.txt  CMAKE_Plugin.txt  CMAKE_Qt.txt  DMakeFileTemplate-dll.mak  DMakeFileTemplate-exe.mak  DMakeFileTemplate-lib.mak  FindDirectX11.cmake  FindezEngine.cmake  toolchain-winstore.cmake
Code/Engine/KrautEditorBasics/: Base.h  CMakeLists.txt  MainEdBasics.cpp  Plugin.h  RenderAPI.h
Code/Engine/KrautEditorRenderAPI_GL/: Base.h  CMakeLists.txt  Main.h  MainGL.cpp  OpenGL.cpp
Code/Engine/KrautFoundation/: CMakeLists.txt  Defines.h  IncludeAll.cpp  IncludeAll.h  Types.h  UserConfig.h
Code/Engine/KrautGenerator/: CMakeLists.txt  PCH.h
Code/Engine/KrautGraphics/: Base.h  CMakeLists.txt
Code/KrautViewer/: Input.cpp  KrautImport.cpp  KrautImport.h  KrautViewer.sln  KrautViewer.vcproj  Main.cpp  Main.h  RenderAPI.cpp  RenderAPI.h  Rendering.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vec3.h  Vec3_Inline.h  VertexBuffer.cpp  VertexBuffer.h
Data/Content/: App.stylesheet  Materials.Library
Data/aeEditor/: CVars.cfg  Layout.qt
Documentation/: Kraut File Format v1.txt  Readme.txt
Tools/aeEditor/: CMakeLists.txt  Foundation.h  LastInclude.h  MainEd.cpp  MessageHandler.cpp  qt3DWidget.cpp  qt3DWidget.moc.h  qtMainWindow.cpp  qtMainWindow.moc.h  qtMainWindow.ui
(+761 files in other folders)
